--- a/people.html
+++ b/people.html
@@ -279,15 +279,15 @@ $(document).ready(function () {
 <!-- --- -->
 <div id="yini-zhang-co-director" class="section level2">
 <h2>Yini Zhang (co-director)</h2>
-<p><img src="files/YiniZhang.jpg" style="width:30%; border:5px solid"></p>
+<p><img src="files/zhang.png" style="width:30%; border:5px solid"></p>
 <p>Yini Zhang (Ph.D., University of Wisconsin-Madison) is an assistant
 professor in the Department of Communication at the University at
 Buffalo. She applies computational methods to the study of networked
 actors on social media, information flows across traditional and social
 media, and their implications for journalism and democracy. Her work has
-been published in journals such as <em>Journal of Communication</em>,
-<em>Journal of Computer-Mediated Communication</em>, and <em>New Media
-&amp; Society</em>.</p>
+been published in leading communication journals such as <em>Journal of
+Communication</em>, <em>Journal of Computer-Mediated Communication</em>,
+and <em>New Media &amp; Society</em>.</p>
 <p>contact: <a href="yzhang20@buffalo.edu">yzhang20@buffalo.edu</a></p>
 </div>
 <div id="jiyoun-suk-co-director" class="section level2">
@@ -326,6 +326,28 @@ Kwak was a professor and chair of the Department of Communication and
 Media at the University of Michigan.</p>
 <p>contact: <a href="njkwak@buffalo.edu">njkwak@buffalo.edu</a></p>
 </div>
+<div id="xinxia-dong" class="section level2">
+<h2>Xinxia Dong</h2>
+<p><img src="files/IMG_6408.JPG" style="width:30%; border:5px solid"></p>
+<p>Xinxia Dong (M.A., Renmin University of China) is pursuing her
+Ph.D. in the Department of Communication at the University at Buffalo.
+Xinxia’s academic interests lie in risk communication and social media.
+Her current published work primarily examines the risk information
+seeking and processing (RISP) model. She is also passionate about
+exploring emerging media and learning various computational methods.</p>
+</div>
+<div id="sara-holland-levin" class="section level2">
+<h2>Sara Holland Levin</h2>
+<p><img src="files/Sara-Holland.jpg" style="width:30%; border:5px solid"></p>
+<p>Sara Holland Levin is a PhD student in Communication at the
+University of Connecticut. Her research focuses on political
+communication on social media, with a particular focus on politicization
+and polarization of attitudes. Sara is especially interested in how
+people process misinformation on social media through a political lens,
+and is passionate about examining these research questions from a
+computational perspective. At the University of Connecticut, Sara
+specializes in teaching digital production coursework.</p>
+</div>
 <div id="rui-wang" class="section level2">
 <h2>Rui Wang</h2>
 <p><img src="files/Rui_Profile.JPG" style="width:30%; border:5px solid"></p>
@@ -339,16 +361,6 @@ reshapes public perception. She is also interested in the effect of
 social media discussion on public attitudes and attention on health and
 politics. She had three-year teaching experience in the School of
 Journalism and Communication at Anhui Normal University.</p>
-</div>
-<div id="xinxia-dong" class="section level2">
-<h2>Xinxia Dong</h2>
-<p><img src="files/IMG_6408.JPG" style="width:30%; border:5px solid"></p>
-<p>Xinxia Dong (M.A., Renmin University of China) is pursuing her
-Ph.D. in the Department of Communication at the University at Buffalo.
-Xinxia’s academic interests lie in risk communication and social media.
-Her current published work primarily examines the risk information
-seeking and processing (RISP) model. She is also passionate about
-exploring emerging media and learning various computational methods.</p>
 </div>
 <div id="dongdong-yang" class="section level2">
 <h2>Dongdong Yang</h2>
