--- a/publications.html
+++ b/publications.html
@@ -276,19 +276,23 @@ $(document).ready(function () {
 <!-- --- -->
 <!-- title: "Publications" -->
 <!-- --- -->
-<div id="under-review" class="section level2">
-<h2>UNDER REVIEW</h2>
-<p>Suk, J., Zhang, Y., Yue, Z., Wang, R., Dong, X., Yang, D., Lian, R.
-&amp; Kwak, N. (R&amp;R) When the Personal Becomes Political: Unpacking
-the Dynamics of Sexual Violence and Gender Justice Discourses across
-Four Social Media Platforms.</p>
-<p>Zhang, Y., Yue, Z., Yang, X., Chen, F. &amp; Kwak, N. (R&amp;R) How a
-Peripheral Ideology Becomes Prominent: Strategic Performance, Audience
-Reaction, and Media Amplification in the Case of QAnon Twitter
-Accounts.</p>
+<div id="journal-publications" class="section level2">
+<h2>JOURNAL PUBLICATIONS</h2>
+<p>Suk, J., Zhang, Y., Yue, Z., Wang, R., Dong, X., Yang, D., &amp;
+Lian, R. (2023) When the Personal Becomes Political: Unpacking the
+Dynamics of Sexual Violence and Gender Justice Discourses across Four
+Social Media Platforms. <em>Communication Research.</em></p>
+<p>Zhang, Y., Yue, Z., Yang, X., Chen, F., &amp; Kwak, N. (2022). How a
+peripheral ideology becomes mainstream: Strategic performance, audience
+reaction, and news media amplification in the case of QAnon Twitter
+accounts. <em>New Media &amp; Society</em>, 14614448221137324.</p>
 </div>
 <div id="conference-papers" class="section level2">
 <h2>CONFERENCE PAPERS</h2>
+<p>Suk, J.,* Zhang, Y.,* Wang, R., Yang, D., Levin, S.H., Dong, X.,
+&amp; Seo, J. (2023). Fleeting Public Attention and Stubborn Partisan
+Passion: Politicization of #MeToo on Twitter. Paper accepted for
+presentation at ICA2023, Toronto, Canada. [*co-first authors]</p>
 <p>Zhang, Y., Suk, J., Yue, Z., An, Z., Yang, D., Wang, R., Dong, X.
 &amp; Joseph, K. (2022) Mapping out Information Flow in the Social Media
 Ecosystem by Tracing Hyperlinks. Paper accepted for presentation at the
