--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@ life, particularly our politics, we are interested in understanding how
 they shape people’s lived experiences. Particularly, we study how people
 use digital media to consume news and political information, learn about
 politics, discuss and share political content with others, and engage in
-the political process. Here, we see politics as relevant to almost all
+political processes. Here, we see politics as relevant to almost all
 facets of our public and private lives, from voting and participation in
 social movements, to what we purchase and what lifestyle we adopt.</p>
 <p>Our methodological approach combines cutting-edge computational
