--- a/publications.html
+++ b/publications.html
@@ -279,24 +279,31 @@ $(document).ready(function () {
 <div id="journal-publications" class="section level2">
 <h2>JOURNAL PUBLICATIONS</h2>
 <p>Suk, J., Zhang, Y., Yue, Z., Wang, R., Dong, X., Yang, D., &amp;
-Lian, R. (2023) When the Personal Becomes Political: Unpacking the
-Dynamics of Sexual Violence and Gender Justice Discourses across Four
-Social Media Platforms. <em>Communication Research.</em></p>
-<p>Zhang, Y., Yue, Z., Yang, X., Chen, F., &amp; Kwak, N. (2022). How a
-peripheral ideology becomes mainstream: Strategic performance, audience
-reaction, and news media amplification in the case of QAnon Twitter
-accounts. <em>New Media &amp; Society</em>, 14614448221137324.</p>
+Lian, R. (2023) <a href="">When the Personal Becomes Political:
+Unpacking the Dynamics of Sexual Violence and Gender Justice Discourses
+across Four Social Media Platforms.</a> <em>Communication
+Research.</em></p>
+<p>Zhang, Y., Yue, Z., Yang, X., Chen, F., &amp; Kwak, N. (2022). <a
+href="https://journals.sagepub.com/doi/full/10.1177/14614448221137324">How
+a peripheral ideology becomes mainstream: Strategic performance,
+audience reaction, and news media amplification in the case of QAnon
+Twitter accounts.</a> <em>New Media &amp; Society</em>,
+14614448221137324.</p>
 </div>
 <div id="conference-papers" class="section level2">
 <h2>CONFERENCE PAPERS</h2>
-<p>Suk, J.,* Zhang, Y.,* Wang, R., Yang, D., Levin, S.H., Dong, X.,
-&amp; Seo, J. (2023). Fleeting Public Attention and Stubborn Partisan
-Passion: Politicization of #MeToo on Twitter. Paper accepted for
-presentation at ICA2023, Toronto, Canada. [*co-first authors]</p>
+<p>Zhang, Y., Suk, J., Levin, S.H., &amp;Wang, R. (2023). Elon Musk,
+Platform Ownership, User Participation, and the Governance of Twitter.
+Paper presented at the American Political Science Association (APSA)
+Conference 2023, Los Angeles, CA.</p>
+<p>Suk, J., Zhang, Y., Wang, R., Yang, D., Levin, S.H., Dong, X., &amp;
+Seo, J. (2023). Fleeting Public Attention and Stubborn Partisan Passion:
+Politicization of #MeToo on Twitter. Paper presented at ICA2023,
+Toronto, Canada.</p>
 <p>Zhang, Y., Suk, J., Yue, Z., An, Z., Yang, D., Wang, R., Dong, X.
 &amp; Joseph, K. (2022) Mapping out Information Flow in the Social Media
-Ecosystem by Tracing Hyperlinks. Paper accepted for presentation at the
-NCA 108th Annual Convention.</p>
+Ecosystem by Tracing Hyperlinks. Paper presented at the NCA 108th Annual
+Convention.</p>
 <p>Zhang, Y., Chen, F., Suk, J. &amp; Yue, Z. (2022) WordPPR: A New
 Keyword Selection Method for Social Media Data Retrieval. Paper
 presented at the fifth annual Politics and Computational Social Science
