--- a/people.html
+++ b/people.html
@@ -279,7 +279,7 @@ $(document).ready(function () {
 <!-- --- -->
 <div id="yini-zhang-co-director" class="section level2">
 <h2>Yini Zhang (co-director)</h2>
-<p><img src="files/zhang.png" style="width:30%; border:5px solid"></p>
+<p><img src="files/headshot2024.jpg" style="width:30%; border:5px solid"></p>
 <p>Yini Zhang (Ph.D., University of Wisconsin-Madison) is an assistant
 professor in the Department of Communication at the University at
 Buffalo. She applies computational methods to the study of networked
