--- a/people.html
+++ b/people.html
@@ -326,6 +326,11 @@ Kwak was a professor and chair of the Department of Communication and
 Media at the University of Michigan.</p>
 <p>contact: <a href="njkwak@buffalo.edu">njkwak@buffalo.edu</a></p>
 </div>
+<div id="emma-bennett" class="section level2">
+<h2>Emma Bennett</h2>
+<p>Emma Bennett is an undergraduate student in the Department of
+Communication at the University of Buffalo.</p>
+</div>
 <div id="xinxia-dong" class="section level2">
 <h2>Xinxia Dong</h2>
 <p><img src="files/IMG_6408.JPG" style="width:30%; border:5px solid"></p>
@@ -347,6 +352,11 @@ people process misinformation on social media through a political lens,
 and is passionate about examining these research questions from a
 computational perspective. At the University of Connecticut, Sara
 specializes in teaching digital production coursework.</p>
+</div>
+<div id="junwan-seo" class="section level2">
+<h2>Junwan Seo</h2>
+<p>Junwan Seo is a Ph.D. student in the Department of Communication at
+the University of Buffalo.</p>
 </div>
 <div id="rui-wang" class="section level2">
 <h2>Rui Wang</h2>
