--- a/publications.html
+++ b/publications.html
@@ -278,11 +278,17 @@ $(document).ready(function () {
 <!-- --- -->
 <div id="journal-publications" class="section level2">
 <h2>JOURNAL PUBLICATIONS</h2>
+<p>Zhang, Y., Chen, F., Suk, J., &amp; Yue, Z. (2023) <a
+href="https://www.tandfonline.com/doi/full/10.1080/19312458.2023.2278177">WordPPR:
+A Researcher-Driven Computational Keyword Selection Method for Text Data
+Retrieval from Digital Media.</a> <em>Communication Methods and
+Measures.</em></p>
 <p>Suk, J., Zhang, Y., Yue, Z., Wang, R., Dong, X., Yang, D., &amp;
-Lian, R. (2023) <a href="">When the Personal Becomes Political:
-Unpacking the Dynamics of Sexual Violence and Gender Justice Discourses
-across Four Social Media Platforms.</a> <em>Communication
-Research.</em></p>
+Lian, R. (2023) <a
+href="https://journals.sagepub.com/doi/abs/10.1177/00936502231154146">When
+the Personal Becomes Political: Unpacking the Dynamics of Sexual
+Violence and Gender Justice Discourses across Four Social Media
+Platforms.</a> <em>Communication Research.</em></p>
 <p>Zhang, Y., Yue, Z., Yang, X., Chen, F., &amp; Kwak, N. (2022). <a
 href="https://journals.sagepub.com/doi/full/10.1177/14614448221137324">How
 a peripheral ideology becomes mainstream: Strategic performance,
@@ -292,7 +298,7 @@ Twitter accounts.</a> <em>New Media &amp; Society</em>,
 </div>
 <div id="conference-papers" class="section level2">
 <h2>CONFERENCE PAPERS</h2>
-<p>Zhang, Y., Suk, J., Levin, S.H., &amp;Wang, R. (2023). Elon Musk,
+<p>Zhang, Y., Suk, J., Levin, S.H., &amp; Wang, R. (2023). Elon Musk,
 Platform Ownership, User Participation, and the Governance of Twitter.
 Paper presented at the American Political Science Association (APSA)
 Conference 2023, Los Angeles, CA.</p>
