--- a/people.html
+++ b/people.html
@@ -13,7 +13,7 @@
 
 <title>people.knit</title>
 
-<script src="site_libs/header-attrs-2.14/header-attrs.js"></script>
+<script src="site_libs/header-attrs-2.26/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/yeti.min.css" rel="stylesheet" />
@@ -141,11 +141,15 @@ $(document).ready(function () {
     href = "index.html";
   var menuAnchor = $('a[href="' + href + '"]');
 
-  // mark it active
-  menuAnchor.tab('show');
-
-  // if it's got a parent navbar menu mark it active as well
-  menuAnchor.closest('li.dropdown').addClass('active');
+  // mark the anchor link active (and if it's in a dropdown, also mark that active)
+  var dropdown = menuAnchor.closest('li.dropdown');
+  if (window.bootstrap) { // Bootstrap 4+
+    menuAnchor.addClass('active');
+    dropdown.find('> .dropdown-toggle').addClass('active');
+  } else { // Bootstrap 3
+    menuAnchor.parent().addClass('active');
+    dropdown.addClass('active');
+  }
 
   // Navbar adjustments
   var navHeight = $(".navbar").first().height() + 15;
@@ -174,8 +178,8 @@ $(document).ready(function () {
   border-radius: 4px;
 }
 
-.tabset-dropdown > .nav-tabs > li.active:before {
-  content: "";
+.tabset-dropdown > .nav-tabs > li.active:before, .tabset-dropdown > .nav-tabs.nav-tabs-open:before {
+  content: "\e259";
   font-family: 'Glyphicons Halflings';
   display: inline-block;
   padding: 10px;
@@ -183,16 +187,9 @@ $(document).ready(function () {
 }
 
 .tabset-dropdown > .nav-tabs.nav-tabs-open > li.active:before {
-  content: "&#xe258;";
-  border: none;
-}
-
-.tabset-dropdown > .nav-tabs.nav-tabs-open:before {
-  content: "";
+  content: "\e258";
   font-family: 'Glyphicons Halflings';
-  display: inline-block;
-  padding: 10px;
-  border-right: 1px solid #ddd;
+  border: none;
 }
 
 .tabset-dropdown > .nav-tabs > li.active {
@@ -328,8 +325,10 @@ Media at the University of Michigan.</p>
 </div>
 <div id="emma-bennett" class="section level2">
 <h2>Emma Bennett</h2>
-<p>Emma Bennett is an undergraduate student in the Department of
-Communication at the University of Buffalo.</p>
+<p><img src="files/Emma.JPG" style="width:30%; border:5px solid"></p>
+<p>Emma Bennett is a 4th Year Communication and Psychology Student at
+University at Buffalo. She is a communication teaching assistant and
+research lab participant.</p>
 </div>
 <div id="xinxia-dong" class="section level2">
 <h2>Xinxia Dong</h2>
@@ -355,8 +354,13 @@ specializes in teaching digital production coursework.</p>
 </div>
 <div id="junwan-seo" class="section level2">
 <h2>Junwan Seo</h2>
+<p><img src="files/Jun_Profile.jpg" style="width:30%; border:5px solid"></p>
 <p>Junwan Seo is a Ph.D. student in the Department of Communication at
-the University of Buffalo.</p>
+the University at Buffalo. His research focuses on media uses and
+effects, narrative effects, and computational social science. He is
+especially interested in the effects of emotional experiences and
+different narrative components such as storyline, characters, and visual
+features.</p>
 </div>
 <div id="rui-wang" class="section level2">
 <h2>Rui Wang</h2>
@@ -385,7 +389,7 @@ online political discussion. She also examines how identity (e.g.,
 gender, fanship, etc.) influences perceptions and attitudes in sports
 communication.</p>
 <div id="alums" class="section level3">
-<h3>Alums:</h3>
+<h3><strong>Alums:</strong></h3>
 </div>
 </div>
 <div id="zhiying-yue" class="section level2">
