--- a/publications.html
+++ b/publications.html
@@ -13,7 +13,7 @@
 
 <title>publications.knit</title>
 
-<script src="site_libs/header-attrs-2.14/header-attrs.js"></script>
+<script src="site_libs/header-attrs-2.26/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/yeti.min.css" rel="stylesheet" />
@@ -141,11 +141,15 @@ $(document).ready(function () {
     href = "index.html";
   var menuAnchor = $('a[href="' + href + '"]');
 
-  // mark it active
-  menuAnchor.tab('show');
-
-  // if it's got a parent navbar menu mark it active as well
-  menuAnchor.closest('li.dropdown').addClass('active');
+  // mark the anchor link active (and if it's in a dropdown, also mark that active)
+  var dropdown = menuAnchor.closest('li.dropdown');
+  if (window.bootstrap) { // Bootstrap 4+
+    menuAnchor.addClass('active');
+    dropdown.find('> .dropdown-toggle').addClass('active');
+  } else { // Bootstrap 3
+    menuAnchor.parent().addClass('active');
+    dropdown.addClass('active');
+  }
 
   // Navbar adjustments
   var navHeight = $(".navbar").first().height() + 15;
@@ -174,8 +178,8 @@ $(document).ready(function () {
   border-radius: 4px;
 }
 
-.tabset-dropdown > .nav-tabs > li.active:before {
-  content: "";
+.tabset-dropdown > .nav-tabs > li.active:before, .tabset-dropdown > .nav-tabs.nav-tabs-open:before {
+  content: "\e259";
   font-family: 'Glyphicons Halflings';
   display: inline-block;
   padding: 10px;
@@ -183,16 +187,9 @@ $(document).ready(function () {
 }
 
 .tabset-dropdown > .nav-tabs.nav-tabs-open > li.active:before {
-  content: "&#xe258;";
-  border: none;
-}
-
-.tabset-dropdown > .nav-tabs.nav-tabs-open:before {
-  content: "";
+  content: "\e258";
   font-family: 'Glyphicons Halflings';
-  display: inline-block;
-  padding: 10px;
-  border-right: 1px solid #ddd;
+  border: none;
 }
 
 .tabset-dropdown > .nav-tabs > li.active {
@@ -282,22 +279,42 @@ $(document).ready(function () {
 href="https://www.tandfonline.com/doi/full/10.1080/19312458.2023.2278177">WordPPR:
 A Researcher-Driven Computational Keyword Selection Method for Text Data
 Retrieval from Digital Media.</a> <em>Communication Methods and
-Measures.</em></p>
+Measures.</em> <a href="https://doi.org/10.1080/19312458.2023.2278177"
+class="uri">https://doi.org/10.1080/19312458.2023.2278177</a></p>
 <p>Suk, J., Zhang, Y., Yue, Z., Wang, R., Dong, X., Yang, D., &amp;
 Lian, R. (2023) <a
 href="https://journals.sagepub.com/doi/abs/10.1177/00936502231154146">When
 the Personal Becomes Political: Unpacking the Dynamics of Sexual
 Violence and Gender Justice Discourses across Four Social Media
-Platforms.</a> <em>Communication Research.</em></p>
+Platforms.</a> <em>Communication Research.</em> <a
+href="https://doi.org/10.1177/00936502231154146"
+class="uri">https://doi.org/10.1177/00936502231154146</a></p>
 <p>Zhang, Y., Yue, Z., Yang, X., Chen, F., &amp; Kwak, N. (2022). <a
 href="https://journals.sagepub.com/doi/full/10.1177/14614448221137324">How
 a peripheral ideology becomes mainstream: Strategic performance,
 audience reaction, and news media amplification in the case of QAnon
 Twitter accounts.</a> <em>New Media &amp; Society</em>,
-14614448221137324.</p>
+14614448221137324. <a href="https://doi.org/10.1177/14614448221137324"
+class="uri">https://doi.org/10.1177/14614448221137324</a></p>
+</div>
+<div id="under-review" class="section level2">
+<h2>UNDER REVIEW</h2>
+<p>Wang, R., Zhang, Y., Suk, J., &amp; Levin, S.H. (R&amp;R). Empowered
+or Constrained in Platform Governance? An Analysis of Twitter Users’
+Responses to Elon Musk’s Takeover.</p>
+<p>Levin, S.H., Wang, R., Seo, J, Leong, Y.Y., Bennett, M., Yang, D.,
+Yang, Z., Chen, M., Zhang, Y., &amp; Suk, J. (under review). From
+#StayWoke to “Culture Wars”: How Social Justice Discourse Is Separately
+and Synergistically Politicized onTwitter and YouTube.</p>
 </div>
 <div id="conference-papers" class="section level2">
 <h2>CONFERENCE PAPERS</h2>
+<p>Wang, R., Levin, S.H., Seo, J, Leong, Y.Y., Bennett, E., Yang, D.,
+Yang, Z., Chen, M., Zhang, Y., &amp; Suk, J. (2024). From #StayWoke to
+“Culture Wars”: How Social Justice Discourse Is Separately and
+Synergistically Politicized on Twitter and YouTube. Paper accepted for
+presentation at the American Political Science Association (APSA)
+Conference 2024, Philadelphia, PA.</p>
 <p>Zhang, Y., Suk, J., Levin, S.H., &amp; Wang, R. (2023). Elon Musk,
 Platform Ownership, User Participation, and the Governance of Twitter.
 Paper presented at the American Political Science Association (APSA)
