--- a/people.html
+++ b/people.html
@@ -279,12 +279,16 @@ $(document).ready(function () {
 <p><img src="files/headshot2024.jpg" style="width:30%; border:5px solid"></p>
 <p>Yini Zhang (Ph.D., University of Wisconsin-Madison) is an assistant
 professor in the Department of Communication at the University at
-Buffalo. She applies computational methods to the study of networked
-actors on social media, information flows across traditional and social
-media, and their implications for journalism and democracy. Her work has
-been published in leading communication journals such as <em>Journal of
+Buffalo. She applies computational methods to the study of social media
+and emerging communication technologies. Specifically, she examines the
+processes and outcomes of primarily political communication within and
+beyond different corners of the new media landscape. Her work has been
+published in leading communication journals such as <em>Journal of
 Communication</em>, <em>Journal of Computer-Mediated Communication</em>,
-and <em>New Media &amp; Society</em>.</p>
+and <em>New Media &amp; Society</em>. Her research has been supported by
+funders like the National Science Foundation and the Knight Foundation
+and received media coverage from major news outlets like the New York
+Times, BBC, and USA TODAY.</p>
 <p>contact: <a href="yzhang20@buffalo.edu">yzhang20@buffalo.edu</a></p>
 </div>
 <div id="jiyoun-suk-co-director" class="section level2">
@@ -326,19 +330,9 @@ Media at the University of Michigan.</p>
 <div id="emma-bennett" class="section level2">
 <h2>Emma Bennett</h2>
 <p><img src="files/Emma.JPG" style="width:30%; border:5px solid"></p>
-<p>Emma Bennett is a 4th Year Communication and Psychology Student at
+<p>Emma Bennett is a 4th-year Communication and Psychology student at
 University at Buffalo. She is a communication teaching assistant and
 research lab participant.</p>
-</div>
-<div id="xinxia-dong" class="section level2">
-<h2>Xinxia Dong</h2>
-<p><img src="files/IMG_6408.JPG" style="width:30%; border:5px solid"></p>
-<p>Xinxia Dong (M.A., Renmin University of China) is pursuing her
-Ph.D. in the Department of Communication at the University at Buffalo.
-Xinxia’s academic interests lie in risk communication and social media.
-Her current published work primarily examines the risk information
-seeking and processing (RISP) model. She is also passionate about
-exploring emerging media and learning various computational methods.</p>
 </div>
 <div id="sara-holland-levin" class="section level2">
 <h2>Sara Holland Levin</h2>
@@ -388,17 +382,27 @@ editing, cute sticker use for impression management, and emoji use in
 online political discussion. She also examines how identity (e.g.,
 gender, fanship, etc.) influences perceptions and attitudes in sports
 communication.</p>
-<div id="alums" class="section level3">
-<h3><strong>Alums:</strong></h3>
+<div id="alumni-network" class="section level3">
+<h3><strong>ALUMNI NETWORK:</strong></h3>
 </div>
 </div>
 <div id="zhiying-yue" class="section level2">
 <h2>Zhiying Yue</h2>
 <p><img src="files/Zhiying_Yue.jpg" style="width:30%; border:5px solid"></p>
-<p>Zhiying Yue was a research assistant in the CEM lab. She researches
-social media use and its impact on psychological and physical
-well-being. She currently holds a post-doc position at the Harvard
-Medical School.</p>
+<p>Zhiying Yue (Ph.D., University at Buffalo) was a research assistant
+in the CEM lab. She researches social media use and its impact on
+psychological and physical well-being. She currently holds a post-doc
+position at the Harvard Medical School.</p>
+</div>
+<div id="xinxia-dong" class="section level2">
+<h2>Xinxia Dong</h2>
+<p><img src="files/IMG_6408.JPG" style="width:30%; border:5px solid"></p>
+<p>Xinxia Dong (M.A., Renmin University of China) is pursuing her
+Ph.D. in the Department of Communication at the University at Buffalo.
+Xinxia’s academic interests lie in risk communication and social media.
+Her current published work primarily examines the risk information
+seeking and processing (RISP) model. She is also passionate about
+exploring emerging media and learning various computational methods.</p>
 </div>
 
 
